--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  test-in-docker:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -17,6 +17,6 @@ jobs:
       - name: Build Docker image
         run: docker build -t app .
 
-      - name: Run Go tests inside Docker container
+      - name: Run go tests inside Docker container
         run: |
           docker run --rm app go test ./...
