--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     depends_on:
       db:
         condition: service_healthy
+    entrypoint: CompileDaemon --build="go build cmd/main.go" --command=./main
   db:
     image: postgres:14
     environment:
